Almost working replys, just need to fix the unaligned ids

--- a/Muppet_Chat/style.css
+++ b/Muppet_Chat/style.css
@@ -91,29 +91,32 @@ textarea {
     transition: 0.1s;
     width: 400px;
     height: 800px;
+    border-color: #333;
+    border-width: 2px;
     border-radius: 5px;
+    border-style: solid;
     text-align: left;
     padding-bottom: 50px;
-  }
-  
-  .card:hover {
+}
+
+
+.card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+}
 
-  }
-
-  .card_image {
+.card_image {
     width: 400px;
     height: 400px;
     object-fit: cover;
     border-radius: 5px 5px 0 0;
-  }
+}
 
-  .card_container {
+.card_container {
     padding: 2px 16px;
     margin-bottom: -25px;
-  }
-  
-  .delete {
+}
+
+.delete {
     background-color: #ff0000;
     color: white;
     padding: 10px 20px;
@@ -121,4 +124,18 @@ textarea {
     border-radius: 5px;
     font-size: 18px;
     cursor: pointer;
+}
+
+.reply-card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.1s;
+    width: 400px;
+    height: 300px;
+    border-color: #333;
+    border-width: 2px;
+    border-radius: 5px;
+    border-style: solid;
+    text-align: left;
+    padding-bottom: 50px;
+    overflow: auto;
 }
